<resources>
    <string name="app_name">Moovon</string>

    <string name="dashboard">Dashboard</string>
    <string name="addWater">Add Water</string>
    <string name="addDistance">Add Distance</string>
    <string name="maps2">Maps</string>
    <string name="sensorTrack">Trak with Sen</string>
    <string name="option3">Option #3</string>
    <string name="logout">Logout</string>

    <string-array name="options">
        <item>@string/dashboard</item>
        <item>@string/addWater</item>
        <!--<item>@string/addDistance</item>-->
        <item>@string/maps2</item>
        <!--<item>@string/sensorTrack</item>-->
        <!--<item>@string/option3</item>-->
        <item>Rate Us</item>
        <item>Invite</item>
        <item>@string/logout</item>
    </string-array>

    <string name="googleMapsClientId">AIzaSyCKoaTaMLrJD20Z4wrcv-2Dkt9Oj5xkEdU</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings related to Settings -->
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="notification_heading">How frequently you want to get notified for below activities</string>
    <string name="notification_freq_water">Water</string>
    <string name="notification_freq_movement">Movement</string>

    <!-- Strings related to Water Intake activity -->
    <string name="label_water_capacity">Amount of H2O you took</string>

    <!-- dash board lable -->
    <string name="walk_progress_lable">Walk Progress</string>
    <string name="Water_drink_progress_lable">Water drink progress</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="custom_token">Custom Token</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="facebook_app_id">1769756766625168</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="roboto_light">sans-serif-light</string>

</resources>
